<resources>
    <string name="app_name">MVVM</string>
    <string name="search">search</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_click_here_to_sign_in">Already have an account? Click here to SIGN IN</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
</resources>
