<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="registerViewModel"
            type="com.lenovo.mvvm.viewmodel.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.register.RegisterActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="24dp"
                    android:src="@drawable/ic_launcher_background" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_bottom"
                        android:hint="name@example.com"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_medium" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border_bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/first_name"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_medium" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/last_name"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_medium" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border_bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gsanthosh91.spincountrypicker.SpinCountryView
                            android:id="@+id/dial_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_medium"
                            app:country="US" />

                        <EditText
                            android:id="@+id/mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="7911 123456"
                            android:inputType="phone"
                            android:padding="12dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_medium" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_small" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_bottom"
                        android:hint="******"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_medium" />


                </LinearLayout>


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/colorAccent"
                android:text="@string/sign_up"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/already_have_an_account_click_here_to_sign_in"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/text_small" />


        </LinearLayout>
    </RelativeLayout>


</layout>